attempt to fix chat textarea overflow display

--- a/src/app/chat/chat.component.css
+++ b/src/app/chat/chat.component.css
@@ -264,6 +264,14 @@ textarea:focus {
 
 }
 
+@media screen and (max-width:769px) {
+  chat-message-list {
+    height: calc(((100vh - 60px) - 5em) - 50px - 100px);
+    /* height:1px; */
+    /* overflow:scroll; */
+  }
+}
+
 @media screen and (max-width:480px) {
   .find-users-text {
     display:none;
@@ -273,5 +281,16 @@ textarea:focus {
   }
   .user-sidenav {
     min-width: unset;
+  }
+  .chat-message-list {
+    height: calc(((100vh - 60px) - 5em) - 50px - 150px);
+    /* height:1px; */
+    /* overflow:scroll; */
+  }
+  .chat-form2 {
+    height:50px;
+  }
+  #chat-page {
+    overflow: hidden;
   }
 }
